added exception handling, filtering students